--- a/telephone_service/app/build.gradle
+++ b/telephone_service/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.image_capture'
+    namespace 'com.example.telephone_service'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.image_capture"
+        applicationId "com.example.telephone_service"
         minSdk 22
         targetSdk 34
         versionCode 1
@@ -36,7 +36,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
